syntax = "proto3";

package account;
option java_multiple_files = true;
option java_package = "com.wncsl.grpc.account";

enum OPERATION {
  INSERT = 0;
  EDIT = 1;
  REMOVE = 2;
  RETRIEVE = 3;
}

enum STATUS{
  SUCCESS = 0;
  FAILURE = 1;
  DENIED = 2;
}
message Response {
  STATUS status = 1;
  int32 code = 2;
  string object = 3;
  string message = 4;
}

message Token {
  string value = 1;
}

//Account Service

message UserGrpc {
  Token token = 1;
  string uuid = 2;
  string name = 3;
  string username = 4;
  string password = 5;
  repeated PermissionGrpc permissions = 6;
  OPERATION operation = 7;
}

message PermissionGrpc {
  Token token = 1;
  string uuid = 2;
  string role = 3;
  string description = 4;
  OPERATION operation = 5;
}

message UserList {
  repeated UserGrpc users = 1;
}

service AccountService {
  rpc addUser(UserGrpc) returns (Response) {}
  rpc addPermission(PermissionGrpc) returns (Response) {}
  rpc CreateUserStream(stream UserGrpc) returns (UserList) {}
  rpc CreateUserStreamBidirectional(stream UserGrpc) returns (stream UserGrpc) {}
}